--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<link href="https://assetcdn.tailsafterglow.io/vendor/remixicon/remixicon.css" rel="stylesheet">
 		<link href="https://assetcdn.tailsafterglow.io/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-		<link href="https://assetcdn.tailsafterglow.io/css/style.css" rel="stylesheet">
+		<link href="assets/css/style.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-1C4EN8BNWQ"></script>
@@ -43,7 +43,7 @@
 			<div class="container-fluid">
 				<div class="row justify-content-center">
 					<div class="col-xl-9 d-flex align-items-center justify-content-lg-between">
-						<h1 class="logo me-auto me-lg-0"><a href="#"> <img src="https://assetcdn.tailsafterglow.io/img/rdgNFT/taglogo.png" class="img-fluid"></a></h1>
+						<h1 class="logo me-auto me-lg-0"><a href="#"> <img src="assets/img/rdgNFT/taglogo.png" class="img-fluid"></a></h1>
 						<nav id="navbar" class="navbar order-last order-lg-0">
 							<ul>
 								<li>
