sample test branch

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<h1><a class="nav-link scrollto" href="#faq">FAQ</a></h1>
 								</li>
 								<li>
-									<h1><a class="nav-link scrollto" href="#team">Team</a></h1>
+									<h1><a class="nav-link scrollto" href="#team">Teams</a></h1>
 								</li>
 								<!--<li>
 									<h1><a class="nav-link scrollto" href="collection.html">Collection</a></h1>
