--- a/tos.html
+++ b/tos.html
@@ -40,7 +40,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="https://assetcdn.tailsafterglow.io/css/style.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
   <link
   rel="stylesheet"
   href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
