add countdown timer

--- a/index.html
+++ b/index.html
@@ -97,17 +97,14 @@
 			<div><img src="assets/img/rdgNFT/offsetFox.png" class="img-fluid" alt="Responsive image" style="position: absolute; bottom: 50px;width: 100%;"></div>
 			<div style="background-color: black;position: absolute; bottom: 0; height: 50px;width: 100%;"></div>
 		</section>
-					<!-- Merch Modal -->
-			<div class="modal fade" id="merchModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+					<!-- Countdown Modal -->
+			<div class="modal fade" id="countModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 				<div class="modal-dialog modal-dialog-centered modal-xl " role="document">
-					<div class="modal-content merchModal">
-						<div class="modal-body merchBody">
+					<div class="modal-content countModal">
+						<div class="modal-body countBody">
 							<div class="hfc">
-								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1630 795">
-									<image width="1630" height="795" class="merchImg" xlink:href="assets/img/merchBanner.png"></image> <a xlink:href="https://www.google.com/" target="_blank">
-									  <rect x="1294" y="544" fill="#fff" opacity="0" width="75" height="79"></rect>
-									</a>
-								  </svg>
+								<img class="img-fluid" src="assets/img/countdown.png">
+								<div class="bottom-right"><p class="display-1" id="countdown">00 : 00 : 00 : 00</p></div>
 						  </div>
 						  </div>
 						
