--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 											</a>
 											<div id="accordion-list-5" class="collapse" data-bs-parent=".accordion-list5">
 												<p class="desSize">
-													Expect that all Tails of the AfterGlow holders will get merchandise drops and have a chance to win on our NFT and whitelist giveaways.
+													Tails of the AfterGlow holders have the opportunity to access limited merchandise drops and participate in our NFT and whitelist giveaways.
 												</p>
 											</div>
 										</li>
@@ -426,7 +426,7 @@
 											</a>
 											<div id="accordion-list-6" class="collapse" data-bs-parent=".accordion-list6">
 												<p class="desSize">
-													Tails of the AfterGlow invests in different P2E games, wherein 10% of their revenue will be allotted for the Alpha, Beta, and Gamma with 5%, 3%, and 2% share, respectively, twice a year (every six months).
+													Tails of the AfterGlow allots 10% of its revenue, including revenue from P2E games and merchandise sales, to the holders. This amount is further subdivided into 5%, 3%, and 2% shares for Alpha, Beta, and Gamma respectively. The distributions are made twice a year, every six months.
 												</p>
 											</div>
 										</li>
@@ -659,9 +659,9 @@
 					<a href="https://tailsafterglow.medium.com" target="_blank" class="medium "><i class="bx bxl-medium"></i></a>
 					<a href="https://www.youtube.com/channel/UCyDvrpcXJBgmg9pvi4D0xGA" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
 				</div>
-				<a class="nav-link scrollto" href="tos.html">
+				<!-- <a class="nav-link scrollto" href="tos.html">
 					<p class="desSize">Terms of service</p>
-				</a>
+				</a> -->
 			</div>
 		</footer>
 		<div id="preloader"></div>
