--- a/tos.html
+++ b/tos.html
@@ -1,67 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>Tails of the AfterGlow</title>
-  <meta name="title" content="Tails of the AfterGlow">
-  <meta name="description" content="Tails of the Afterglow is a unique collection of 7,777 dope foxes roaming around the grounds of Polygon Blockchain.">
-
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://tailsafterglow.io/">
-  <meta property="og:title" content="Tails of the AfterGlow">
-  <meta property="og:description" content="Tails of the Afterglow is a unique collection of 7,777 dope foxes roaming around the grounds of Polygon Blockchain.">
-  <meta property="og:image" content="https://tailsafterglow.io/https://assetcdn.tailsafterglow.io/img/rdgNFT/hero-bg.jpg">
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://tailsafterglow.io/">
-  <meta property="twitter:title" content="Tails of the AfterGlow">
-  <meta property="twitter:description" content="Tails of the Afterglow is a unique collection of 7,777 dope foxes roaming around the grounds of Polygon Blockchain.">
-  <meta property="twitter:image" content="https://tailsafterglow.io/https://assetcdn.tailsafterglow.io/img/rdgNFT/hero-bg.jpg">
-
-  <!-- Favicons -->
-  <link href="https://assetcdn.tailsafterglow.io/img/rdgNFT/tag.jpg" rel="icon">
-  <link href="https://assetcdn.tailsafterglow.io/img/rdgNFT/tag.jpg" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="https://assetcdn.tailsafterglow.io/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://assetcdn.tailsafterglow.io/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://assetcdn.tailsafterglow.io/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="https://assetcdn.tailsafterglow.io/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="https://assetcdn.tailsafterglow.io/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="https://assetcdn.tailsafterglow.io/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
-  <link
-  rel="stylesheet"
-  href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
-/>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-55C0HXQR4D%22%3E"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-  
-    gtag('config', 'G-55C0HXQR4D');
-  </script>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id=%27+i+dl;f.parentNode.insertBefore(j,f)';
-  })(window,document,'script','dataLayer','GTM-PLXCXWN');</script>
-  <!-- End Google Tag Manager -->
-</head>
+	<head>
+		<meta charset="utf-8">
+		<meta content="width=device-width, initial-scale=1.0" name="viewport">
+		<title>Tails of the AfterGlow</title>
+		<meta name="title" content="Tails of the AfterGlow">
+		<meta name="description" content="Tails of the Afterglow is a unique collection of 4,266 dope foxes roaming around the grounds of Polygon Blockchain.">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://tailsafterglow.io/">
+		<meta property="og:title" content="Tails of the AfterGlow">
+		<meta property="og:description" content="Tails of the Afterglow is a unique collection of 4,266 dope foxes roaming around the grounds of Polygon Blockchain.">
+		<meta property="og:image" content="assets/img/rdgNFT/hero-bg.jpg">
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://tailsafterglow.io/">
+		<meta property="twitter:title" content="Tails of the AfterGlow">
+		<meta property="twitter:description" content="Tails of the Afterglow is a unique collection of 4,266 dope foxes roaming around the grounds of Polygon Blockchain.">
+		<meta property="twitter:image" content="assets/img/rdgNFT/hero-bg.jpg">
+		<link href="assets/img/rdgNFT/tag.jpg" rel="icon">
+		<link href="assets/img/rdgNFT/tag.jpg" rel="apple-touch-icon">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+		<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+		<link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+		<link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+		<link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+		<link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+		<link href="assets/css/style.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-1C4EN8BNWQ"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			
+			gtag('config', 'G-1C4EN8BNWQ');
+		</script>
+	</head>
 
 <body> 
   <!-- Google Tag Manager (noscript) -->
