--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 							<i class="bi bi-list mobile-nav-toggle"></i>
 						</nav>
 						<div class="social-links">
-							<a href="https://discord.gg/tailsafterglow" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
+							<a href="https://discord.gg/6h9M488Cqr" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
 							<a href="https://twitter.com/tailsafterglow" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
 							<a href="https://www.facebook.com/TailsAfterGlow/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
 							<a href="https://www.instagram.com/tailsafterglow/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
 							<a href="https://tailsafterglow.medium.com" target="_blank" class="medium socialHide"><i class="bx bxl-medium"></i></a>
-							<a href="https://www.youtube.com/channel/UCq4sEG4TBv-FHDgstt9dDGA" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
+							<a href="https://www.youtube.com/@TailsAfterGlow" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
 						</div>
 					</div>
 				</div>
@@ -98,13 +98,17 @@
 			<div style="background-color: black;position: absolute; bottom: 0; height: 50px;width: 100%;"></div>
 		</section>
 					<!-- Countdown Modal -->
-			<div class="modal fade" id="countModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+			<!-- Merch Modal -->
+			<div class="modal fade" id="merchModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 				<div class="modal-dialog modal-dialog-centered modal-xl " role="document">
-					<div class="modal-content countModal">
-						<div class="modal-body countBody">
+					<div class="modal-content merchModal">
+						<div class="modal-body merchBody">
 							<div class="hfc">
-								<img class="img-fluid" src="assets/img/countdown.png">
-								<div class="bottom-right"><p class="display-1" id="countdown">00 : 00 : 00 : 00</p></div>
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1636 819">
+									<image width="1636" height="819" xlink:href="assets/img/merch.png"></image> <a xlink:href="https://shopee.ph/tailsafterglow" target="_blank">
+									  <rect x="932" y="556" fill="#fff" opacity="0" width="440" height="70"></rect>
+									</a>
+								  </svg>
 						  </div>
 						  </div>
 						
@@ -652,12 +656,12 @@
 				<p class="desSize">Copyright © 2023 TAG by Real Deal Guild</p>
 				<p class="desSize">All Rights Reserved.</p>
 				<div class="social-links">
-					<a href="https://discord.gg/tailsafterglow" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
+					<a href="https://discord.gg/6h9M488Cqr" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
 					<a href="https://twitter.com/tailsafterglow" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
 					<a href="https://www.facebook.com/TailsAfterGlow/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
 					<a href="https://www.instagram.com/tailsafterglow/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
 					<a href="https://tailsafterglow.medium.com" target="_blank" class="medium "><i class="bx bxl-medium"></i></a>
-					<a href="https://www.youtube.com/channel/UCyDvrpcXJBgmg9pvi4D0xGA" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
+					<a href="https://www.youtube.com/@TailsAfterGlow" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
 				</div>
 				<!-- <a class="nav-link scrollto" href="tos.html">
 					<p class="desSize">Terms of service</p>
