--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 						<div class="modal-body merchBody">
 							<div class="hfc">
 								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1636 819">
-									<image width="1636" height="819" xlink:href="assets/img/merch.png"></image> <a xlink:href="https://shopee.ph/tailsafterglow" target="_blank">
-									  <rect x="932" y="556" fill="#fff" opacity="0" width="440" height="70"></rect>
+									<image width="1636" height="819" xlink:href="assets/img/yep.png"></image> <a xlink:href="https://www.youtube.com/watch?v=Q_NXwRG0rNY" target="_blank">
+										<rect x="622" y="525" fill="#fff" opacity="0" width="100" height="100"></rect>
 									</a>
 								  </svg>
 						  </div>
@@ -191,7 +191,27 @@
 			</div>
 		</section>
 		<section id="roadmap" class="roadmap">
-			<div class="container">
+			<!-- <div class="container">
+				<div class="section-title"></div>
+				<div class="row">
+					<div class="col-lg-6  d-flex align-items-stretch">
+					    <video autoplay loop muted inline data-aos="fade-right" data-aos-duration="1500" class="img-fluid rounded-circle img-thumbnail">
+					        <source src="assets/img/rdgNFT/gif1.webm" type="video/webm" >
+					    </video>
+						
+					</div>
+					<div data-aos="fade-left" data-aos-duration="1500" class="col-lg-6  d-flex align-items-center justify-content-center mt-4 mt-md-0">
+						<div class="icon-box ">
+							<h1 class="gradientTag">TAG ROLE CHECKER</h1>
+							<p class="desSize">a brief summary anu ginagaw ng tools tapos sasabihin natn na you can access the role checker by this website.<br><br>
+								<br>
+								<br>
+								<a href="https://opensea.io/collection/tailsafterglow" class="minting-btn minting-gtm" target="_blank">ROLE CHECKER</a>
+						</div>
+					</div>
+				</div>
+			</div> -->
+			<div class="container" style="margin-top: 60px;">
 				<div class="text-left title" data-aos="fade-right" data-aos-duration="1500">
 					<h1 class="gradientTag roadmapTitle">TAG Holder Benefits</h1>
 					<p class="desSize">Foxes unite! Tails of the AfterGlow is on the way to give you unique privileges to look forward to as we go through. </p>
@@ -238,6 +258,7 @@
 					</div>
 				</div>
 			</div>
+			
 		</section>
 		<section class="p2e">
 			<div class="container">
@@ -333,7 +354,7 @@
 		<section class="partnersSection">
 			<div class="container">
 				<div class="text-left title" data-aos="fade-right" data-aos-duration="1500">
-					<h1 class="gradientTag roadmapTitle">P2E PARTNERS</h1>
+					<h1 class="gradientTag roadmapTitle">WEB3 PARTNERS</h1>
 				</div>
 				<div class="container-fluid">
 					<div class="row justify-content-center">
