--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								With their prestige and aesthetic, these TAGs are here to rule the metaverse.<br><br>
 								<br>
 								<br>
-								<a href="https://opensea.io/collection/tailsafterglow" class="minting-btn minting-gtm" target="_blank">SOLD OUT - View on Opensea</a>
+								<a href="https://magiceden.io/collections/polygon/0xe7b94a3208111a595a27634ca68d2210e674a7e6" class="minting-btn minting-gtm" target="_blank">SOLD OUT - View on Magiceden</a>
 						</div>
 					</div>
 				</div>
@@ -474,7 +474,7 @@
 											</a>
 											<div id="accordion-list-8" class="collapse" data-bs-parent=".accordion-list8">
 												<p class="desSize">
-													The collection can be found on the secondary market – <a href="https://opensea.io/collection/tailsafterglow" target="_blank" class="desSize">OpenSea</a>If you are interested, some may be selling theirs on it. However, we encourage holders to tame your mysterious, dope-looking foxes until you experience all the privileges you will get along with them.
+													The collection can be found on the secondary market – <a href="https://magiceden.io/collections/polygon/0xe7b94a3208111a595a27634ca68d2210e674a7e6" target="_blank" class="desSize">Magiceden</a>If you are interested, some may be selling theirs on it. However, we encourage holders to tame your mysterious, dope-looking foxes until you experience all the privileges you will get along with them.
 												</p>
 											</div>
 										</li>
