--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<i class="bi bi-list mobile-nav-toggle"></i>
 						</nav>
 						<div class="social-links">
-							<a href="https://discord.gg/6h9M488Cqr" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
+							<a href="https://discord.gg/Wf8bD6Pgsh" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
 							<a href="https://twitter.com/tailsafterglow" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
 							<a href="https://www.facebook.com/TailsAfterGlow/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
 							<a href="https://www.instagram.com/tailsafterglow/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -677,7 +677,7 @@
 				<p class="desSize">Copyright © 2023 TAG by Real Deal Guild</p>
 				<p class="desSize">All Rights Reserved.</p>
 				<div class="social-links">
-					<a href="https://discord.gg/6h9M488Cqr" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
+					<a href="https://discord.gg/Wf8bD6Pgsh" target="_blank" class="discord"><i class="bx bxl-discord"></i></a>
 					<a href="https://twitter.com/tailsafterglow" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
 					<a href="https://www.facebook.com/TailsAfterGlow/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
 					<a href="https://www.instagram.com/tailsafterglow/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
